Minor style fixes for dark mode

--- a/src/components/my-widgets-page.scss
+++ b/src/components/my-widgets-page.scss
@@ -1063,6 +1063,10 @@
 			}
 		}
 
+		.provisional-access-container {
+			background: #4a4121;
+		}
+
 		.overview {
 			.controls {
 				.preview-svg {
